--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "validator": "^13.1.1"
+  },
+  "engines": {
+    "node": "12.16.1",
+    "vscode": "^1.22.0"
   }
 }
